--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,9 @@ jobs:
         run: |
           docker pull tenable/was-scanner:latest
           docker run \
-            --network juice-shop-net \
-            tenable/was-scanner:latest \
-            ping -c 3 juice-shop
+          --network juice-shop-net \
+          tenable/was-scanner:latest \
+          curl -v http://juice-shop:3000
 
       - name: Run WAS
         run: |
