--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,10 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@v3
 
-      - name: Create Docker network
-        run: docker network create juice-shop-net
-
-      - name: Start Juice Shop
+      - name: Start Juice Shop (background)
         run: |
           docker pull bkimminich/juice-shop
-          docker run -d --rm --name juice-shop --network juice-shop-net -p 3000:3000 bkimminich/juice-shop
+          docker run -d --rm --name juice-shop -p 3000:3000 bkimminich/juice-shop
 
       - name: Wait for Juice Shop to be ready
         run: |
@@ -39,19 +36,17 @@ jobs:
 
       - name: Run WAS
         run: |
+          docker pull tenable/was-scanner:latest
           docker run \
-          --network juice-shop-net \
-          --shm-size=512m \
-          -e WAS_MODE=cicd \
-          -e ACCESS_KEY=$ACCESS_KEY \
-          -e SECRET_KEY=$SECRET_KEY \
-          -v ./:/scanner \
-          tenable/was-scanner:latest
+            --link juice-shop \
+            -e WAS_MODE=cicd \
+            -e ACCESS_KEY=$ACCESS_KEY \
+            -e SECRET_KEY=$SECRET_KEY \
+            -v $(pwd):/scanner \
+            tenable/was-scanner:latest || true
         env:
           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
 
-      - name: Cleanup containers
-        run: |
-          docker stop juice-shop || true
-          docker network rm juice-shop-net || true
+      - name: Cleanup
+        run: docker stop juice-shop || true
