--- a/tenable_was.conf
+++ b/tenable_was.conf
@@ -158,7 +158,7 @@ scan {
         "page_limit"=1
     }
     session {}
-    target="http://localhost:3000"
+    target="http://juice-shop:3000"
     timeout="00:10:00"
 }
 "template_id"="3e5862a6-e672-4a22-97b8-9301ec3439c8"
