--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,15 +17,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Create Docker network
-        run: docker network create juice-shop-net
-
       - name: Start OWASP Juice Shop
         run: |
           docker pull bkimminich/juice-shop
           docker run -d --rm \
             --name juice-shop \
-            --network juice-shop-net \
             -p 3000:3000 \
             bkimminich/juice-shop
 
@@ -45,15 +41,7 @@ jobs:
       - name: Run Tenable Web App Scanner
         run: |
           docker pull tenable/was-scanner:latest
-          docker run \
-            --rm \
-            --network juice-shop-net \
-            -e WAS_MODE=cicd \
-            -e ACCESS_KEY=$ACCESS_KEY \
-            -e SECRET_KEY=$SECRET_KEY \
-            -e STARTUP_TIMEOUT=90 \
-            -v ./:/scanner \
-            tenable/was-scanner:latest
+          docker run -v $(pwd):/scanner -t -e WAS_MODE=cicd -e ACCESS_KEY=${ACCESS_KEY} -e SECRET_KEY=${SECRET_KEY} --link juice-shop:juice-shop
         env:
           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
