--- a/tenable_was.conf
+++ b/tenable_was.conf
@@ -1,4 +1,5 @@
-"config_id"="7013e972-0695-42f7-aa14-50579f0501ec"
+"config_id"="76d8f24e-2852-4e26-bb70-7593bc4b1040"
+"folder_id"=d403e3f6-a697-46ed-a2a1-3809974054e0
 "results_visibility"=dashboard
 scan {
     assessment {
