--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,14 @@ jobs:
       - name: Run Tenable Web App Scanner
         run: |
           docker pull tenable/was-scanner:latest
-          docker run -v $(pwd):/scanner -t -e WAS_MODE=cicd -e ACCESS_KEY=${ACCESS_KEY} -e SECRET_KEY=${SECRET_KEY} --link juice-shop:juice-shop
+          docker run \
+            -v $(pwd):/scanner \
+            -t \
+            -e WAS_MODE=cicd \
+            -e ACCESS_KEY=${ACCESS_KEY} \
+            -e SECRET_KEY=${SECRET_KEY} \
+            --link juice-shop:juice-shop \
+            tenable/was-scanner
         env:
           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
