--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Start network
+        uses: docker network create juice-shop-net
+
       - name: Start OWASP Juice Shop
         run: |
           docker pull bkimminich/juice-shop
           docker run -d --rm \
             --name juice-shop \
+            --network juice-shop-net \
             -p 3000:3000 \
             bkimminich/juice-shop
 
@@ -29,12 +33,12 @@ jobs:
         run: |
           docker pull tenable/was-scanner:latest
           docker run \
+            -network juice-shop-net
             -v $(pwd):/scanner \
             -t \
             -e WAS_MODE=cicd \
             -e ACCESS_KEY=${ACCESS_KEY} \
             -e SECRET_KEY=${SECRET_KEY} \
-            --link juice-shop:juice-shop \
             tenable/was-scanner
         env:
           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
