--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,12 @@ jobs:
           echo "Timed out waiting for Juice Shop in‐network"
           exit 1
 
+      - name: Ensure config is present
+        run: |
+          ls -1
+          echo "Contents of tenable_was.conf:"
+          sed -n '1,20p' tenable_was.conf || true
+
       - name: Run Tenable Web App Scanner
         run: |
           docker pull tenable/was-scanner:latest
@@ -54,9 +60,18 @@ jobs:
             -e ACCESS_KEY=${ACCESS_KEY} \
             -e SECRET_KEY=${SECRET_KEY} \
             tenable/was-scanner
+          echo "--- scanner.log ---"
+          cat scanner.log
         env:
           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
+
+
+      - name: Dump Scanner Log
+        if: always()
+        run: |
+          echo "=== scanner.log ==="
+          cat scanner.log || echo "(no log found)"
 
       - name: Cleanup
         if: always()
