prøver meg på localhost

--- a/tenable_was.conf
+++ b/tenable_was.conf
@@ -2,7 +2,7 @@
 "folder_id"=d403e3f6-a697-46ed-a2a1-3809974054e0
 "results_visibility"=dashboard
 scan {
-    target="http://juice-shop:3000"
+    target="http://localhost:3000"
     assessment {
         dictionary=limited
         enable=true
