la til en liste med flagg i tenable conf

--- a/tenable_was.conf
+++ b/tenable_was.conf
@@ -26,6 +26,11 @@ scan {
         "pool_size"=1
         "screen_height"=1200
         "screen_width"=1600
+
+        flags=[
+              "--no-sandbox",
+              "--disable-dev-shm-usage"
+            ]
     }
     "debug_mode"=false
     http {
