--- a/ci/tenable_was.conf
+++ b/ci/tenable_was.conf
@@ -27,7 +27,7 @@ scan {
         "screen_height"=1200
         "screen_width"=1600
 
-        flags=[
+        "flags"=[
               "--no-sandbox",
               "--disable-dev-shm-usage"
             ]
