--- a/tenable_was.conf
+++ b/tenable_was.conf
@@ -31,7 +31,7 @@ scan {
           "--disable-dev-shm-usage"
         ]
     }
-    "debug_mode"=false
+    "debug_mode"=true
     http {
         "custom_user_agent"=false
         "include_scan_id"=false
